refactor: 일부 파일 수정